--- a/style.css
+++ b/style.css
@@ -281,8 +281,8 @@ body .col-10 {
 }
 
 .aboutContentContainer img{
-   height: 100%; /* This is the key: Prioritize filling the height */
-   width: auto;  /* Let width adjust automatically to maintain aspect ratio */
+   width: 100%; /* This is the key: Prioritize filling the height */
+   height: auto;  /* Let width adjust automatically to maintain aspect ratio */
 }
 
 .aboutContentContainer .col-5 {
